# Pj-FAER

./: .gitignore  =0.0.6  CLAUDE.md  CLAUDE_COST_MODELLING.md  CLAUDE_MAJOR_INCIDENT.md  CLAUDE_SCHEMATIC_DEMOS.md  CURSOR_PROMPTS.md  FAER_EXECUTIVE_BRIEF.md  README.md  pj_faer_implementation_plan.md  pyproject.toml  requirements.txt
app/: Home.py
app/components/: __init__.py  scenario_summary.py  schematic.py  spline_editor.py
app/pages/: 10_Insights.py  11_MEDEVAC_Demo.py  1_Arrivals.py  1_Scenario.py  2_Resources.py  2_Run.py  3_Results.py  3_Schematic.py  4_Capacity_Scaling.py  4_Compare.py  4_Run.py  5_Aeromed.py  5_Results.py  5_Run.py  5_Sensitivity.py  (+8 more)
docs/: FAER-M_IMPLEMENTATION.md  FAER_SCHEMATIC_EXPLAINER.md  PRD_AGENT_INTEGRATION.md  SCHEMATIC_INTEGRATION_INSTRUCTIONS.md  STREAMLIT_EXPLAINER.md
notebooks/: agent_prototyping.ipynb
tests/: __init__.py  conftest.py  test_aeromed_processes.py  test_arrival_models.py  test_arrivals.py  test_bed_states.py  test_blocking.py  test_comparison.py  test_costs.py  test_demand_scaling.py  test_diagnostics.py  test_diagnostics_loop.py  test_downstream_nodes.py  test_downstream_processes.py  test_dynamic_resource.py  test_experiment.py  test_fleet.py  test_full_model.py  test_handover.py  test_incident.py  test_incident_integration.py  test_model.py  test_multistream_arrivals.py  test_priority_queuing.py  test_results.py  test_routing.py  test_scaffolding.py  test_scaling_integration.py  test_scenario.py  test_schematic.py  test_schematic_data.py  test_sensitivity.py  test_spline_arrivals.py  test_transfers.py
(+54 files in other folders)
